--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -25,7 +25,7 @@
     <link href="../../../../css/style.css" rel="stylesheet">
 </head>
 
-<body class="login-page img-fluid" style="background-image: url(../../../../images/hard.jpeg); background-position: center center;height: 600px; background-repeat:no-repeat; ">
+<body class="login-page img-fluid" style="background-image: url(../../../../images/login.webp); background-size: 1920px 990px;">
     <div class="login-box">
         <div class="logo">
             <a href="javascript:void(0);">SATH <b>UAP</b></a>
@@ -52,11 +52,10 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-xs-4">
+                        <div class="col-md-12">
                             <button class="btn btn-block bg-green waves-effect" type="submit">INGRESAR</button>
                         </div>
                     </div>
-                  
                 </form>
             </div>
         </div>
