--- a/src/main/resources/templates/ficha_tecnica.html
+++ b/src/main/resources/templates/ficha_tecnica.html
@@ -121,7 +121,7 @@
                                         <th class="text-center" width="20%"><img th:src="@{'/uploads/'+${servicio.qr}}" width="60" height="65"></th>
                                         <th class="text-center" width="60%"><h6>UNIVERSIDAD AMAZÓNICA DE PANDO</h6>
                                             <h6 th:text="${'FICHA TÉCNICA: N°' + servicio.id_servicio}"></h6>
-                                        <th class="text-center" width="20%"><img src="../../../../images/logoUap.png" width="50" height="60"></th>
+                                        <th class="text-center" width="20%"><img src="../../../../images/logoUap.webp" width="50" height="60"></th>
                                     </tr>
                                 </tbody>
                             </table>
