--- a/src/main/resources/templates/verificar.html
+++ b/src/main/resources/templates/verificar.html
@@ -49,7 +49,7 @@
                     <div class="card">
                         <div class="header">
                             <h2>
-                                BUSCAR USUARIO POR<br> CI / NOMBRE / COD FUNCIONARIO
+                                BUSCAR USUARIO POR C.I / NOMBRE 
                             </h2>
                         </div>
                         <div class="body">
