--- a/src/main/resources/templates/INFORMES/ficha_baja.html
+++ b/src/main/resources/templates/INFORMES/ficha_baja.html
@@ -20,21 +20,24 @@
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> 
     <style type="text/css">
         body {
-            font-size: 11.5px;
+            font-size: 10.5px;
             line-height: 1.1;
         }
     
         h6 {
-            margin-top: 0px;
+            margin-top: 10px;
         }
     
         #nota {
             margin-top: 0px;
         }
     
+        #tabla0 {
+            margin-bottom: 5px;
+        }
+
         #tabla1 {
             margin-bottom: 5px;
-            margin-top: 20px;
         }
     
         #tabla2 {
@@ -47,12 +50,9 @@
         }
     
         /* Establecer el tamaño de la hoja a carta (8.5x11 pulgadas) */
-        @page {
+            @page {
             size: 8.5in 11in;
-            margin: 0.1in;
-            /* Márgenes de 0.1 pulgada en cada lado y 0.5 pulgadas en la parte inferior */
-            margin-bottom: 0.1in;
-            margin-top: 0.1in;
+            margin: 0.5in; /* Márgenes de 0.5 pulgadas en cada lado */
         }
         
     
@@ -70,15 +70,7 @@
             height: 115px;
         }
     
-        section {
-            position: sticky;
-            top: 100px;
-            /* Ajusta la posición vertical según el tamaño de tu encabezado */
-            left: 0.2in;
-            /* Ajusta la posición horizontal según tus necesidades */
-            width: 98%;
-            text-align: center;
-        }
+        
     
         footer {
             position: fixed;
@@ -104,59 +96,64 @@
 
         </script>
         <div class="container-fluid">
-            <header>
+            <!-- <header>
                 <img src="../../../../images/Encabezado.webp" alt="Header Image">
-            </header>
+            </header> -->
             
             <section>
-                    <table class="table table-bordered border-white" id="tabla1">
+                    <table class="table table-bordered border-dark table-sm" id="tabla0">
                         <tbody>
                             <tr>
-                                <th colspan="2">
-                                    <H6>INFORME</H6><span style="font-weight: bold; float: right; font-size: small;"><b
-                                            th:text="${'INF.D.H.S.-USIC-N°'+baja.id_baja+'/'+#dates.format(baja.fecha_baja, 'yyyy')}"></b></span>
-                                </th>
+                                <th class="text-center" width="20%"><img src="../../../../images/logo.webp" width="110px" height="65px"></th>
+                                <th class="text-center" width="60%">
+                                    <h6>UNIVERSIDAD AMAZÓNICA DE PANDO</h6>
+                                    <h6 th:text="${'INFORME TÉCNICO HARDWARE N°'+baja.id_baja}"></h6></th>
+                                <th class="text-center" width="20%"><img src="../../../../images/logoUap.webp" width="50px" height="60px"></th>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <table class="table table-bordered border-dark" id="tabla1">
+                        <tbody>
+                           
+                            <tr>
+                                <th colspan="2" style="text-align: center;" height="60px" width="1%">A: </th>
+                                <td colspan="3" class="text-md-start" th:utext="${per_dirig}"> </td>
                             </tr>
                             <tr>
-                                <th scope="row" width="10%">A: </th>
-                                <td class="text-md-start" th:utext="${per_dirig}"> </td>
-                            </tr>
-                            <tr>
-                                <th scope="row" width="10%">VIA: </th>
-                                <td class="text-md-start">ING. LUIS ENRIQUE VILLCA MAMANI <br><b>JEFE a.i UNIDAD DE SISTEMAS DE INFORMACIÓN Y
+                                <th colspan="2" style="text-align: center;" height="60px" scope="row">VIA: </th>
+                                <td colspan="3" class="text-md-start" width="100%">ING. LUIS ENRIQUE VILLCA MAMANI <br><b>JEFE a.i UNIDAD DE
+                                        SISTEMAS DE INFORMACIÓN Y
                                         COMUNICACIÓN</b> </td>
                             </tr>
                             <tr>
-                                <th scope="row" width="10%">DE: </th>
-                                <td class="text-md-start" th:utext="${user_tec}"></td>
+                                <th colspan="2" style="text-align: center;" height="60px" scope="row">DE: </th>
+                                <td colspan="3" class="text-md-start" th:utext="${user_tec}"></td>
+                            </tr>
+                            
+                            <tr>
+                                <th colspan="2" scope="row" style="text-align: center;" width="1%" th:text="${'REF.'}"></th>
+                                <td style="text-transform:uppercase" width="80%" th:text="${baja.ref_baja}"></td>
+                                <th colspan="3" style="text-transform:uppercase" width="20%" th:text="${#dates.format(baja.fecha_baja, 'dd MMMM yyyy')}"></th>
                             </tr>
                             <tr>
-                                <th scope="row" width="10%" class="text-md-end">FECHA: </th>
-                                <td class="text-md-start" th:text="${#dates.format(baja.fecha_baja, 'dd MMMM yyyy')}"></td>
-                            </tr>
-                            <tr>
-                                <th scope="row" width="10%"></th>
-                                <th scope="row" width="95%" class="text-md-start" style="text-transform:uppercase" th:text="${'REF.'+baja.ref_baja}"></th>
-                            </tr>
-                            <tr>
-                                <td colspan="2" style="text-align: justify; text-transform: uppercase;" th:if="${baja.detalleBajas.size() == 1}"
+                                <td colspan="4" style="text-align: justify; text-transform: uppercase;" th:if="${baja.detalleBajas.size() == 1}"
                                     th:utext="${'Tengo a bien dirigirme a su persona para saludarlo /a cordialmente y a la vez hacerle llegar el Informe Técnico del Equipo solicitado en CITE:<b>'+baja.cite+'</b>'+', bajo los argumentos técnicos que a continuación se detalla:'}">
                                 </td>
-                                <td colspan="2" style="text-align: justify; text-transform: uppercase;" th:if="${baja.detalleBajas.size() > 1}"
+                                <td colspan="4" style="text-align: justify; text-transform: uppercase;" th:if="${baja.detalleBajas.size() > 1}"
                                     th:utext="${'Tengo a bien dirigirme a su persona para saludarlo /a cordialmente y a la vez hacerle llegar el Informe Técnico del Los Equipos solicitado en CITE:<b>'+baja.cite+'</b>'+', bajo los argumentos técnicos que a continuación se detalla:'}">
                                 </td>
                             </tr>
-                            <tr>
-                                <th class="text-start" colspan="2">
-                                    I. DESCRIPCIÓN DEL ESTADO DEL EQUIPO /S
-                                </th>
-                            </tr>
+                           
                         </tbody>
                     </table>
                     
                     <table class="table table-bordered border-dark" id="tabla2" >
                         <tbody>
                             
+                            <tr>
+                                <th colspan="5" > I. DESCRIPCIÓN DEL ESTADO DEL EQUIPO /S</th>
+                               
+                            </tr>
                             <tr>
                                 <th width="1%">N°</th>
                                 <th width="15%">CODIGO UAP</th>
@@ -182,7 +179,7 @@
                         </tbody>
                     </table>
 
-                    <table class="table table-bordered border-white" id="tabla3">
+                    <table class="table table-bordered border-dark" id="tabla3">
                         <tbody>
                             
                             <tr>
@@ -191,11 +188,11 @@
                                 </th>
                             </tr>
                             <tr>
-                                <td th:text="${baja.recomendacion_baja}" style="text-transform: uppercase; text-align: justify;">
+                                <td th:utext="${baja.recomendacion_baja+'<br><br>EN CUANTO PUEDO INFORMAR PARA FINES CONSIGUIENTES.<br><br>Cc/archivos DHS'}" style="text-transform: uppercase; text-align: justify;">
 
                                 </td>
                             </tr>
-                            <tr>
+                            <!-- <tr>
                                 <td style="text-transform: uppercase; text-align: justify;">
                                     EN CUANTO PUEDO INFORMAR PARA FINES CONSIGUIENTES.
                                 </td>
@@ -204,7 +201,7 @@
                                 <td style="text-align: justify;">
                                     Cc/archivos DHS
                                 </td>
-                            </tr>
+                            </tr> -->
                            
                         </tbody>
                     </table>
