--- a/src/main/resources/templates/content.html
+++ b/src/main/resources/templates/content.html
@@ -77,7 +77,7 @@
             <th>SELECCIONE</th>
           </tr>
         </thead>
-        <tbody>
+        <tbody style="text-transform:uppercase;">
           <tr th:each="p, cont : ${personas}" th:if="${p.estado != 'X'}">
           
             <td th:text="${cont.count}"></td>
