--- a/src/main/resources/templates/lista_Persona.html
+++ b/src/main/resources/templates/lista_Persona.html
@@ -54,6 +54,7 @@
                         <div class="card">
                             <div class="body">
                                 <div th:replace="layaut/layaut :: alert"></div>
+                                <div th:replace="layaut/layaut :: alert2"></div>
                                 <div class="table-responsive">
                                     <br>
                                     <table class="table table-bordered table-striped table-hover dataTable js-exportable">
