--- a/src/main/resources/templates/INFORMES/Reporte_Informe_Baja.html
+++ b/src/main/resources/templates/INFORMES/Reporte_Informe_Baja.html
@@ -65,6 +65,7 @@
                                             <th>Referencia</th>
                                             <th>Cite</th>
                                             <th>Observacion</th>
+                                            <th>Tec Colaborador</th>
                                             <th>Operación</th>
                                         </tr>
                                     </thead>
@@ -85,6 +86,8 @@
                                             <td th:text="${b.ref_baja}"></td>
                                             <td th:text="${b.cite}"></td>
                                             <td th:text="${b.observacion_baja}"></td>
+                                            <td th:if="${b.usuario_reg != null}" th:text="${user}"></td>
+                                            <td th:if="${b.usuario_reg == null}" th:text="${'SIN REGISTRO'}"></td>
 
                                             <td>
                                                 <a th:href="${'../../../../hardware-servicio/eliminar_ficha_tecnica_baja/'+ b.id_baja}"
@@ -116,6 +119,7 @@
                                             <th>Referencia</th>
                                             <th>Cite</th>
                                             <th>Observacion</th>
+                                            <th>Tec Colaborador</th>
                                             <th>Operación</th>
                                         </tr>
                                     </tfoot>
